<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.fjerabek.temperature_controller.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="3"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/setNotifyValue"
        android:orderInCategory="1"
        android:title="@string/temperature_notiffication"/>
    <item
        android:id="@+id/nameSetting"
        android:orderInCategory="2"
        android:title="@string/set_names"
        />

    <item
        android:id="@+id/connect"
        android:icon="@drawable/ic_compare_arrows_white"
        android:title="@string/connect"
        app:showAsAction="ifRoom"/>
</menu>
