
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.StatusFragment"
    android:orientation="vertical"
    android:id="@+id/statusView">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="50dp"
                    android:text="@string/mode"
                    android:layout_marginEnd="20dp"/>

                <TextView
                    android:id="@+id/mode"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/status"
                    android:layout_height="wrap_content"
                    android:layout_width="50dp"
                    android:layout_marginEnd="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/status"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:id="@+id/TemperatureCardName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temperature"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TemperatureCardName"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.github.lzyzsd.circleprogress.ArcProgress
                    android:id="@+id/temp1"
                    android:layout_width="@dimen/tempSize"
                    android:layout_height="@dimen/tempSize"
                    android:layout_marginEnd="@dimen/horizontal_temp_spacing"
                    android:layout_marginStart="@dimen/horizontal_temp_spacing"
                    app:arc_angle="270"
                    app:arc_max="120"
                    app:arc_text_size="@dimen/temp_text_size"
                    app:arc_unfinished_color="@android:color/transparent"
                    app:arc_finished_color="@color/temperatureBarColor"
                    app:arc_suffix_text_padding="@dimen/temp_suffix_text_padding"
                    app:arc_suffix_text="°C"
                    app:arc_progress="0"
                    app:arc_bottom_text="TEST"/>

                <com.github.lzyzsd.circleprogress.ArcProgress
                    android:id="@+id/temp1FromNotify"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="@dimen/notify_temp_spacing"
                    app:arc_stroke_width="2dp"
                    app:arc_angle="270"
                    app:arc_max="100"
                    app:arc_text_size="@dimen/notify_temp_text_size"
                    app:arc_progress="0"
                    app:arc_unfinished_color="@android:color/transparent"
                    app:arc_finished_color="@color/temperatureBarColor"
                    android:layout_toStartOf="@+id/temp1"/>

                <com.github.lzyzsd.circleprogress.ArcProgress
                    android:id="@+id/temp1ToNotify"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:arc_stroke_width="2dp"
                    app:arc_angle="270"
                    app:arc_max="100"
                    app:arc_text_size="@dimen/notify_temp_text_size"
                    app:arc_progress="0"
                    app:arc_unfinished_color="@android:color/transparent"
                    app:arc_finished_color="@color/temperatureBarColor"
                    android:layout_marginStart="@dimen/notify_temp_spacing"
                    android:layout_toEndOf="@+id/temp1"/>


                <com.github.lzyzsd.circleprogress.ArcProgress
                    android:id="@+id/temp2"
                    android:layout_width="@dimen/tempSize"
                    android:layout_height="@dimen/tempSize"
                    android:layout_marginEnd="@dimen/horizontal_temp_spacing"
                    android:layout_marginStart="@dimen/horizontal_temp_spacing"
                    app:arc_angle="270"
                    app:arc_progress="0"
                    app:arc_max="120"
                    app:arc_text_size="@dimen/temp_text_size"
                    app:arc_unfinished_color="@android:color/transparent"
                    app:arc_finished_color="@color/temperatureBarColor"
                    app:arc_suffix_text_padding="@dimen/temp_suffix_text_padding"
                    app:arc_suffix_text="°C"
                    android:layout_toEndOf="@+id/temp1"/>

                <com.github.lzyzsd.circleprogress.ArcProgress
                    android:id="@+id/temp2ToNotify"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:arc_stroke_width="2dp"
                    app:arc_angle="270"
                    app:arc_max="100"
                    app:arc_text_size="@dimen/notify_temp_text_size"
                    app:arc_progress="0"
                    app:arc_unfinished_color="@android:color/transparent"
                    app:arc_finished_color="@color/temperatureBarColor"
                    android:layout_marginStart="@dimen/notify_temp_spacing"
                    android:layout_toEndOf="@+id/temp2"/>

                <com.github.lzyzsd.circleprogress.ArcProgress
                    android:id="@+id/temp2FromNotify"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="@dimen/notify_temp_spacing"
                    app:arc_stroke_width="2dp"
                    app:arc_angle="270"
                    app:arc_max="100"
                    app:arc_text_size="@dimen/notify_temp_text_size"
                    app:arc_progress="0"
                    app:arc_unfinished_color="@android:color/transparent"
                    app:arc_finished_color="@color/temperatureBarColor"
                    android:layout_toStartOf="@+id/temp2"/>

                <com.github.lzyzsd.circleprogress.ArcProgress
                    android:id="@+id/temp3"
                    android:layout_width="@dimen/tempSize"
                    android:layout_height="@dimen/tempSize"
                    android:layout_marginEnd="@dimen/horizontal_temp_spacing"
                    android:layout_marginStart="@dimen/horizontal_temp_spacing"
                    app:arc_angle="270"
                    app:arc_text_size="@dimen/temp_text_size"
                    app:arc_unfinished_color="@android:color/transparent"
                    app:arc_finished_color="@color/temperatureBarColor"
                    app:arc_suffix_text_padding="@dimen/temp_suffix_text_padding"
                    app:arc_suffix_text="°C"
                    app:arc_progress="0"
                    app:arc_max="120"
                    android:layout_toEndOf="@+id/temp2"/>

                <com.github.lzyzsd.circleprogress.ArcProgress
                    android:id="@+id/temp3FromNotify"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="@dimen/notify_temp_spacing"
                    app:arc_stroke_width="2dp"
                    app:arc_angle="270"
                    app:arc_max="100"
                    app:arc_text_size="@dimen/notify_temp_text_size"
                    app:arc_progress="0"
                    app:arc_unfinished_color="@android:color/transparent"
                    app:arc_finished_color="@color/temperatureBarColor"
                    android:layout_toStartOf="@+id/temp3"/>

                <com.github.lzyzsd.circleprogress.ArcProgress
                    android:id="@+id/temp3ToNotify"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="@dimen/notify_temp_spacing"
                    app:arc_stroke_width="2dp"
                    app:arc_angle="270"
                    app:arc_max="100"
                    app:arc_text_size="@dimen/notify_temp_text_size"
                    app:arc_progress="0"
                    app:arc_unfinished_color="@android:color/transparent"
                    app:arc_finished_color="@color/temperatureBarColor"
                    android:layout_marginStart="-25dp"
                    android:layout_toEndOf="@+id/temp3"/>
            </RelativeLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:id="@+id/PowerCardName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/power"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/PowerCardName"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.github.lzyzsd.circleprogress.ArcProgress
                    android:id="@+id/heatUnit1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="16dp"
                    android:background="@android:color/transparent"
                    app:arc_angle="270"
                    app:arc_suffix_text="%"
                    app:arc_finished_color="@color/powerBarColor"
                    app:arc_unfinished_color="@android:color/transparent"
                    app:arc_text_color="@color/powerBarTextColor"/>

                <com.github.lzyzsd.circleprogress.ArcProgress
                    android:id="@+id/heatUnit2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="16dp"
                    android:background="@android:color/transparent"
                    app:arc_angle="270"
                    app:arc_suffix_text="%"
                    app:arc_finished_color="@color/powerBarColor"
                    app:arc_unfinished_color="@android:color/transparent"
                    app:arc_text_color="@color/powerBarTextColor"/>

                <com.github.lzyzsd.circleprogress.ArcProgress
                    android:id="@+id/heatUnit3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@android:color/transparent"
                    app:arc_angle="270"
                    app:arc_suffix_text="%"
                    app:arc_finished_color="@color/powerBarColor"
                    app:arc_unfinished_color="@android:color/transparent"
                    app:arc_text_color="@color/powerBarTextColor"/>
            </LinearLayout>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <RelativeLayout
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/statusText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textStatus"
                android:textStyle="bold"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/statusText"
                android:layout_marginTop="4dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/temp1Text"
                    android:layout_column="0"
                    android:layout_row="0"/>

                <TextView
                    android:id="@+id/temp2Text"
                    android:layout_column="0"
                    android:layout_row="1"/>

                <TextView
                    android:layout_width="80dp"
                    android:id="@+id/temp3Text"
                    android:layout_column="0"
                    android:layout_row="2"/>

                <TextView
                    android:id="@+id/temp1Value"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:text="N/A"/>

                <TextView
                    android:id="@+id/temp2Value"
                    android:layout_column="1"
                    android:layout_row="1"
                    android:text="N/A"/>

                <TextView
                    android:id="@+id/temp3Value"
                    android:layout_column="1"
                    android:layout_row="2"
                    android:text="N/A"/>

            </GridLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>